deploy/manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nyan-deployment
  labels:
    app: nyan-cat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nyan-cat
  template:
    metadata:
      labels:
        app: nyan-cat
    spec:
      containers:
        - name: nyan
          image: daviey/nyan-cat-web:latest  # x86
          # image: jonasbg/nyancat:latest  # ARM64
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80  # x86
              # containerPort: 8080  # ARM64
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 20m
              memory: 16Mi
