deploy/manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nyan-ingress
  labels:
    app: nyan-cat
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/nyan)$ $1/ permanent;
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: nyan-service
          servicePort: 80
        path: /nyan/?(.*)
